
=======================================================
		WanT code:  Log of Changes 
=======================================================


Jan 30 2012     util.f90 updated; some calls to utile wrappers renamed. (AF)

Jan 10 2012     bug fixed in libs/files.f90 (tags pointer was not nullified). (AF)

Nov 25 2011     sax2qexml implementation completed (gkvectors re-written). (AF)

Nov 07 2011     sax2qexml utilities added. Bug fixed in qexml_write_wfc.
		c_mkdir updated to c_mkdir_int (QE-4.3). (AF)

Nov 02 2011     bug fixed in util.f90 in zmat_diag (the input matrix is
		overwritten). Courtesy of Eleonora Luppi. (AF)

Oct 14 2011     operator_module updated; sum_sgm.x tool added to utility. (AF)

Oct 12 2011     version number changed to 2.4.0beta1 . decay.x utility added.
		memstat.c routine removed. (AF)

Oct 11 2011     datafile_urot input var added to blc2wan, to allow for and extra
		unitary rotation to be plugged in. do_cmplxconjg var added to fix
		an old bug in SaX. (AF)

Apr 19 2011     memusage routines added to transport and embed. 
		Problem with ne_buffer fixed (wasn't it already). (AF)

Mar 17 2011     150th anniversary of unified Italy. FOund and fixed a bug showing up
		when damping to file lead-self-energies or conductor green's functions:
		In those cases, kpt symmetry should not be used and it is recommended not
		to specify the kpt mesh by hand. This makes the 2D FFT working properly. 
		Checks and tests added. 
		Buffering of correlation self-energy added. (AF)

Feb 14 2011     want repository moved to qe-forge and converted to svn.
		Courtesy of Layla Martin-Samos. (AF)

Jan 25 2011     memstat.c updated from QE-4.2. Courtesy of Yifeng Chen.  (AF)

Dec 07 2010     Cleanup in embed and transport. vars for correlation sgm's 
		in the leads added. Big changes in correlation module to
		be consistent with the new treatment of the self-energies. 
		Test03 updated including a case study of the Klein paradox. (AF)
