@@ -4,6 +4,8 @@
 =======================================================
 
 
+Sep 21 2012     Bug fixed in transport with correlation self-energies. (AF)
+
 Jan 30 2012     util.f90 updated; some calls to utile wrappers renamed. (AF)
 
 Jan 10 2012     bug fixed in libs/files.f90 (tags pointer was not nullified). (AF)
